move header and rename title

--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -9,10 +9,10 @@
   <title>P2Pwn Me</title>
 </head>
 <body>
-  <header>
-    <h1>P2PWN Me</h1>
-  </header>
   <div class="container">
+    <header>
+      <h1>P2PWN</h1>
+    </header>
     <section class="chat-room"></section>
     <section id="lobby" class="lobby">
       <ul>
