--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -23,5 +23,6 @@
     </section>
   </div>
   <script src="js/lobby-loader.js"></script>
+  <script src="https://www.nodeknockout.com/entries/162-node-ice/vote.js" type="text/javascript"></script> 
 </body>
 </html>
