--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,16 @@ body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(../assets/images/green_marble.jpg);
   color: white;
+  overflow-x: hidden;
+}
+
+p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-bottom: 2rem;
 }
 
 header h1 {
@@ -24,7 +34,8 @@ header h1 {
 }
 
 .container {
-  width: 640px;
+  max-width: 640px;
+  width: 100%;
   min-height: calc(100vh - 48px);
   margin: 0;
   margin-left: 10rem;
@@ -65,4 +76,51 @@ header h1 {
   border-right-color: #555555;
   border-left-color: #bbbbbb;
   border-top-color: #dddddd;
+}
+
+.center {
+  text-align: center;
+}
+
+hr {
+  border-color: #ff5e00;
+  border-width: 2px;
+  margin-top: 8rem;
+}
+
+#hackbit-vote-widget {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.button {
+  padding: 1.6rem 2.5rem;
+  margin: 6rem auto;
+  display: inline-block;
+  background: linear-gradient(
+    to bottom,
+    #f9ede4 2%,
+    #d07432 2%,
+    #f78b3f 3%,
+    #d26101 91%,
+    #8e4510 91%,
+    #ca5b0b 98%,
+    #000000 98%
+  );
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.button:hover {
+  background: linear-gradient(
+    to bottom,
+    #000 2%,
+    #cc5500 3%,
+    #da864a 91%,
+    #da864a 98%
+  );
 }
