add developer guide

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>P2Pwn Me</title>
     <style>
-        .container { 
-            margin: 0 auto; 
+        .container {
+            margin: 0 auto;
             min-height: 900px;
             padding: 2rem;
         }
@@ -184,20 +184,31 @@
 
             <section>
                 <h2>Developer Guide</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque itaque libero, quos hic culpa
-                    quaerat,
-                    quae adipisci autem repellendus nam modi velit. Odio nulla esse voluptatum a, architecto dolore
-                    debitis
-                    doloribus quos repellendus itaque provident
+                <p>
+                  Integrate with our P2PWN peer discovery service so that your players can easily create lobbies and join currently active games being hosted.
                 </p>
-                <p> Vel eos hic molestiae dignissimos amet ad reprehenderit
-                    animi libero, officia perferendis dolores dolor. Ad nobis minima ab debitis praesentium nesciunt,
-                    explicabo eaque ea! Autem dolores adipisci eos perspiciatis, vero reprehenderit ducimus aut nostrum
-                    numquam porro magnam quasi enim sint id facere quis voluptas voluptate libero odio accusamus
-                    impedit
-                    nihil dignissimos? A quos, minima ipsa dolores distinctio, id eaque quisquam eveniet architecto
-                    cumque
-                    cupiditate beatae.</p>
+                <p>
+                Leverage the P2PWN <a href="./lobby">Lobby gui</a> for live updates of active rooms.
+                P2PWN also has a rich API with full control via HTTP REST and websocket requests.
+                Review the <a href="https://github.com/Hackbit/nko2018-p2pwithme/wiki/API-Documentation">API documentation here</a>.
+                </p>
+                <p>
+                  The best way to get started is to use one of our reference projects.
+                  <ul style="font-size: 2rem">
+                    <li><a href="https://github.com/theRemix/p2pwn-ready-node-wss">P2PWN WSS Starter Kit for Node</a></li>
+                    <li><a href="https://github.com/epilande/p2pwnme-space-wars">Full featured browser game demo in JS</a></li>
+                    <li><a href="https://github.com/GomaGames/P2PWN-BoardRoom">Minimal browser game demo in JS</a></li>
+                    <li><a href="https://github.com/theRemix/p2pwn-ready-go-wss">P2PWN WSS Starter Kit for Go</a></li>
+                    <li><a href="https://github.com/theRemix/P2PWN-Go-Maze">Full featured desktop game demo in Go</a> with host and lobby features</li>
+
+                  </ul>
+                </p>
+                <p>
+                For more help with integrating P2PWN for your project, check our <a href="https://github.com/Hackbit/nko2018-p2pwithme/wiki/Integration-Guide">Integration Guide</a>
+                </p>
+                <p>
+                Also check our <a href="https://github.com/Hackbit/nko2018-p2pwithme/wiki">Wiki on Github</a> for more updates and roadmap.
+                </p>
             </section>
 
 
