--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,14 @@
             height: calc(100vh - 50rem);
         }
 
+        ul {
+            list-style: none;
+        }
+
+        li {
+            font-size: 2rem;
+        }
+
         .content {
             margin: -2rem;
             padding: 2rem;
@@ -126,15 +134,15 @@
                 <h1>P2PWN</h1>
             </header>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque itaque libero, quos hic culpa quaerat,
-                quae adipisci autem repellendus nam modi velit. Odio nulla esse voluptatum a, architecto dolore debitis
-                doloribus quos repellendus itaque provident
+            <p>
+                Remember the days of hanging out in the lobby of battle.net or C&C, looking to PWN some noobs with your 133t skills?
+                Now there is a shared lobby that allows anyone to host peer-to-peer connections with anyone across the Intertubes&trade;
+                
             </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, optio itaque error dolorem sunt
-                dolorum,
-                beatae mollitia et eveniet asperiores voluptates at ad, quod voluptas. Eveniet nemo libero distinctio.
-                Animi.</p>
+            <p>P2PWN is a broker for connection between the clients, but does not handle any of the traffic between connection. It seems like every big Intertubes&trade;
+                company wants you to use their service, so they can see everything you do, when the fact is you should be able to connect with just the people you choose to.
+            </p>
 
             <a class="button" href="/lobby">Go to lobby</a>
         </section>
@@ -164,20 +172,16 @@
 
             <section>
                 <h2>Start using it</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque itaque libero, quos hic culpa
-                    quaerat,
-                    quae adipisci autem repellendus nam modi velit. Odio nulla esse voluptatum a, architecto dolore
-                    debitis
-                    doloribus quos repellendus itaque provident
+                <p>
+                    P2PWN was created to let you and your friends easily create peer-to-peer connections for whatever applications or games you want to host.
                 </p>
-                <p> Vel eos hic molestiae dignissimos amet ad reprehenderit
-                    animi libero, officia perferendis dolores dolor. Ad nobis minima ab debitis praesentium nesciunt,
-                    explicabo eaque ea! Autem dolores adipisci eos perspiciatis, vero reprehenderit ducimus aut nostrum
-                    numquam porro magnam quasi enim sint id facere quis voluptas voluptate libero odio accusamus
-                    impedit
-                    nihil dignissimos? A quos, minima ipsa dolores distinctio, id eaque quisquam eveniet architecto
-                    cumque
-                    cupiditate beatae.</p>
+                <p>
+                    Here are a couple of games to get you started.
+                    <ul>
+                        <li><a href="https://theremix.github.io/P2PWN-Go-Maze/">Go Maze</a></li>
+                        <li><a href="https://github.com/epilande/p2pwnme-space-wars">Space Wars🚀</a></li>
+                    </ul>
+                </p>
 
             </section>
 
