--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>P2Pwn Me</title>
 </head>
-<body>
+<body class="">
   <div class="container">
-    <header>
+    <header class="lobby-header">
       <h1>P2PWN</h1>
     </header>
     <section class="chat-room"></section>
