--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
             <p>
                 Remember the days of hanging out in the lobby of battle.net or C&C, looking to PWN some noobs with your 133t skills?
                 Now there is a shared lobby that allows anyone to host peer-to-peer connections with anyone across the Intertubes&trade;
-                
+
             </p>
 
             <p>P2PWN is a broker for connection between the clients, but does not handle any of the traffic between connection. It seems like every big Intertubes&trade;
@@ -152,20 +152,14 @@
         <div class="container">
             <section>
                 <h2>What?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque itaque libero, quos hic culpa
-                    quaerat,
-                    quae adipisci autem repellendus nam modi velit. Odio nulla esse voluptatum a, architecto dolore
-                    debitis
-                    doloribus quos repellendus itaque provident
+                <p>
+
+P2PWN is a multiplayer lobby service for peer host discovery.
+
+You can host your own games, or join someone elses. Just like we used to do in the 90s.
+
+The P2PWN Lobby websocket connection broker also provides a list of active games that anyone can join.
                 </p>
-                <p> Vel eos hic molestiae dignissimos amet ad reprehenderit
-                    animi libero, officia perferendis dolores dolor. Ad nobis minima ab debitis praesentium nesciunt,
-                    explicabo eaque ea! Autem dolores adipisci eos perspiciatis, vero reprehenderit ducimus aut nostrum
-                    numquam porro magnam quasi enim sint id facere quis voluptas voluptate libero odio accusamus
-                    impedit
-                    nihil dignissimos? A quos, minima ipsa dolores distinctio, id eaque quisquam eveniet architecto
-                    cumque
-                    cupiditate beatae.</p>
 
             </section>
 
